[package]
name = "siop"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
description = "Self-Issued OpenID Provider v2"
repository = "https://github.com/spruceid/siop-rs/"
documentation = "https://docs.rs/siop/"

[dependencies]
# openidconnect = { version = "2.4.0", default-features = false }
openidconnect = { git = "https://github.com/ramosbugs/openidconnect-rs", branch = "main" }
serde = { version = "1.0.147", features = ["derive"] }
oidc4vp = { git = "https://github.com/spruceid/oidc4vp-rs" }
ssi = { version = "0.5", default-features = false }
thiserror = "1.0.37"

[dev-dependencies]
serde_json = "1.0.87"
pretty_assertions = "1.3.0"
did-ion = "0.2"
tokio = { version = "1.21.2", features = ["macros"] }
